--- a/css/style.css
+++ b/css/style.css
@@ -483,6 +483,10 @@ img {
   color: #c4c4c4;
 }
 
+.text-gray-e3 {
+  color: #e3e3e3;
+}
+
 .text-gray-ee {
   color: #eee;
 }
@@ -1661,7 +1665,7 @@ img {
   font-weight: 800;
   line-height: 130%;
   text-transform: uppercase;
-  color: #096639;
+  color: #333;
 }
 .breadcrumb-item:first-child::before {
   content: "";
@@ -1673,7 +1677,7 @@ img {
   left: -1.75rem;
   transform: translateY(-50%);
   font-size: 28px;
-  color: #acce22;
+  color: #fb0505;
 }
 .breadcrumb-item:last-child {
   user-select: none;
@@ -1884,6 +1888,20 @@ img {
   background-color: #fb0505;
 }
 
+.heading-tertiary {
+  position: relative;
+  padding-left: 0.5rem;
+}
+.heading-tertiary::before {
+  position: absolute;
+  content: "";
+  width: 3px;
+  height: 26px;
+  left: 0;
+  border-radius: 0.625rem;
+  background-color: #fb0505;
+}
+
 .box-media {
   padding: 2.5rem 1.875rem 1.25rem;
   position: relative;
@@ -1957,44 +1975,6 @@ img {
 .section-quinary .block-article .articles-small .article:last-child {
   border-bottom: 0;
   padding-bottom: 0;
-}
-
-.newspaper {
-  position: relative;
-  overflow: hidden;
-  border: 1px solid rgba(39, 154, 47, 0.4);
-}
-.newspaper::before {
-  content: "";
-  background-image: linear-gradient(180deg, #f6f7fbb8 30%, #f6f7fb 50%, #f6f7fb 100%);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-.newspaper-content {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 100%;
-  text-align: center;
-  padding: 1.875rem;
-}
-.newspaper-logo-nn img {
-  margin: auto;
-}
-.newspaper .doted {
-  margin: 3rem auto;
-  max-width: 200px;
-  border-bottom: 2px dashed #152764;
-}
-.newspaper .hotline-icon {
-  width: 2rem;
-  height: 2rem;
-  background-color: #fff;
-  border-radius: 50%;
 }
 
 .register-email__input {
@@ -2082,6 +2062,9 @@ img {
   grid-template-columns: 1fr 330px;
   margin-bottom: 1.875rem;
 }
+.cate-primary__left .articles .article:first-child {
+  padding-top: 0;
+}
 .cate-primary__right {
   padding-left: 1.875rem;
   border-left: 1px solid #e5e5e5;
@@ -2107,44 +2090,49 @@ img {
   border-left: 1px solid #e5e5e5;
 }
 
-.pagination-item {
-  border-radius: 3px;
-  border: 1px solid #e2e2e2;
-  background-color: #dfdfdf;
-  transition: all 0.2s;
-}
 .pagination-item + .pagination-item {
   margin-left: 8px;
 }
-.pagination-item:hover {
-  background-color: #096639;
-  color: #fff;
-}
-.pagination-item.active {
-  background-color: #096639;
+.pagination-item.active .pagination-link {
+  background-color: #ff0000;
   color: #fff;
 }
 .pagination-link {
-  padding: 10px 15px;
-  display: inline-block;
+  height: 32px;
+  width: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  border: 1px solid #f2f2f2;
+  background-color: #f2f2f2;
+  transition: all 0.2s;
+}
+.pagination-link:hover {
+  background-color: #ff0000;
+  color: #fff;
 }
 
-.box-event {
-  position: relative;
-  max-width: 300px;
+.most-read__list .most-read__item:first-child {
+  padding-top: 0;
 }
-.box-event .swiper-pagination {
-  top: 8px;
-  bottom: auto;
-  text-align: right;
+.most-read__list .most-read__item:last-child {
+  border-bottom: 0;
 }
-.box-event .swiper-pagination-bullet {
-  width: 1rem;
-  height: 0.25rem;
-  border-radius: 0;
+.most-read__list .most-read__number {
+  flex-shrink: 0;
 }
-.box-event .swiper-pagination-bullet-active {
-  background: #096639;
+.most-read__list .most-read__content {
+  flex: 1;
+}
+
+.cmt-box-cate__img {
+  flex-shrink: 0;
+  margin-top: 4px;
+}
+.cmt-box-cate__img img {
+  width: 18px;
+  height: auto !important;
 }
 
 .detail-primary {
@@ -2208,7 +2196,7 @@ img {
   margin-bottom: 1.5rem;
 }
 .detail-content blockquote {
-  background-color: #f2efea;
+  background-color: #fcf8ee;
   padding: 18px 15px;
   margin-bottom: 1.25rem;
 }
@@ -2272,7 +2260,7 @@ img {
 
 .detail-tag-icon {
   font-size: 14px;
-  background: #f2efea;
+  background: #f7f7f7;
   height: 36px;
   width: 70px;
   position: relative;
@@ -2287,7 +2275,7 @@ img {
   height: 0;
   border-top: 18px solid transparent;
   border-bottom: 18px solid transparent;
-  border-left: 8px solid #f2efea;
+  border-left: 8px solid #f7f7f7;
   right: -8px;
   position: absolute;
 }
@@ -2305,7 +2293,7 @@ img {
   position: relative;
 }
 .detail-tag-item:nth-child(odd) {
-  color: #096639;
+  color: #ff0000;
 }
 .detail-tag-item::before {
   position: absolute;
@@ -2323,11 +2311,27 @@ img {
   content: "";
 }
 .detail-tag-item a:hover {
-  color: #096639;
+  color: #ff0000;
 }
 
 .realated-news__container .article:last-child, .realated-news__container .article:nth-last-child(2), .realated-news__container .article:nth-last-child(3) {
   border-bottom: none;
+}
+
+.detail-related-news__heading {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+.detail-related-news__list {
+  padding-left: 20px;
+}
+.detail-related-news__item {
+  list-style: disc;
+  font-size: 16px;
+  line-height: 130%;
+  margin-bottom: 15px;
 }
 
 #back-top {
