--- a/scss/_cate.scss
+++ b/scss/_cate.scss
@@ -2,6 +2,13 @@
     grid-template-columns: 1fr 330px;
     margin-bottom: 1.875rem;
     &__left {
+        .articles {
+            .article {
+                &:first-child {
+                    padding-top: 0;
+                }
+            }
+        }
     }
     &__right {
         padding-left: 1.875rem;
@@ -39,40 +46,56 @@
         + .pagination-item {
             margin-left: 8px;
         }
-        border-radius: 3px;
-        border: 1px solid #e2e2e2;
-        background-color: #dfdfdf;
-        transition: all 0.2s;
-        &:hover {
-            background-color: #096639;
-            color: #fff;
-        }
         &.active {
-            background-color: #096639;
-            color: #fff;
+            .pagination-link {
+                background-color: #ff0000;
+                color: #fff;
+            }
         }
     }
     &-link {
-        padding: 10px 15px;
-        display: inline-block;
+        height: 32px;
+        width: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 3px;
+        border: 1px solid #f2f2f2;
+        background-color: #f2f2f2;
+        transition: all 0.2s;
+        &:hover {
+            background-color: #ff0000;
+            color: #fff;
+        }
     }
 }
 
-.box-event {
-    position: relative;
-    max-width: 300px;
+.most-read {
+    &__list {
+        .most-read__item {
+            &:first-child {
+                padding-top: 0;
+            }
+            &:last-child {
+                border-bottom: 0;
+            }
+        }
+        .most-read__number {
+            flex-shrink: 0;
+        }
+        .most-read__content {
+            flex: 1;
+        }
+    }
+}
 
-    & .swiper-pagination {
-        top: 8px;
-        bottom: auto;
-        text-align: right;
-    }
-    & .swiper-pagination-bullet {
-        width: 1rem;
-        height: 0.25rem;
-        border-radius: 0;
-    }
-    & .swiper-pagination-bullet-active {
-        background: #096639;
+.cmt-box-cate {
+    &__img {
+        flex-shrink: 0;
+        margin-top: 4px;
+        img {
+            width: 18px;
+            height: auto !important;
+        }
     }
 }
